--- a/src/components/Landingpage/landingpage.css
+++ b/src/components/Landingpage/landingpage.css
@@ -66,6 +66,11 @@ color: #000000;
   align-items: center;
 
 }
+.card-icon img {
+  width:40px;
+  height:40px;
+  padding:0 10px 0 7px
+}
 /* clamp */
 /* clamp(min size,ratio,max size) */
 /* ratio = (max size/ design's width)X100 vw */
